--- a/src/component/about/about.css
+++ b/src/component/about/about.css
@@ -5,8 +5,9 @@
 }
 
 .about_me {
-  width: 100%;
-  aspect-ratio: 1/1;
+  /* width: 100%;
+  height: 100%; */
+  /* aspect-ratio: 1/1; */
   border-radius: 2rem;
   background: linear-gradient(
     45deg,
@@ -25,6 +26,8 @@
 }
 .about_me-image:hover {
   transform: rotate(0);
+}
+.about_me-image img {
 }
 .about_cards {
   display: grid;
