--- a/src/component/header/header.css
+++ b/src/component/header/header.css
@@ -1,12 +1,12 @@
 header {
-  height: 800px;
+  /* height: 800px; */
   padding-top: 7rem;
   overflow: hidden;
 }
 
 .header_container {
   text-align: center;
-  height: 100%;
+  /* height: 100%; */
   position: relative;
 }
 
@@ -46,7 +46,7 @@ header {
 .me {
   background: linear-gradient(var(--color-primary), transparent);
   width: 22rem;
-  height: 900px;
+  /* height: 900px; */
   position: absolute;
   left: calc(50% - 11rem);
   margin-top: 4rem;
